hphp/test/zend/good/Zend/tests/lsb_009.php.expectf

Fatal error: A name is expected here. in %s/lsb_009.php on line 2
